routes working... need to render

--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "body-parser": "^1.18.2",
     "bookshelf": "^0.12.1",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "handlebars": "^4.0.11",
     "knex": "^0.14.3",
+    "method-override": "^2.3.10",
     "pg": "^7.4.1"
   }
 }
