--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
   },
   "homepage": "https://github.com/matukai/express-gallery#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bookshelf": "^0.12.1",
+    "connect-redis": "^3.3.3",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "handlebars": "^4.0.11",
     "knex": "^0.14.3",
     "method-override": "^2.3.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1"
   }
 }
